--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
   </div>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <script src="app.js"></script>
+  <script src="./static/app.js"></script>
 </body>
 
 </html>
