--- a/templates/font-icons.html
+++ b/templates/font-icons.html
@@ -6,11 +6,13 @@
 <title>NBA G9 | Pages | Font Icons</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
-<link href="static rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<!-- <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all"> -->
+<link href="static" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet"/>
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"/>
-<link href="static/css/black-dashboard-flask.css?v=1.0.0" rel="stylesheet"/>
+<!-- <link href="static/css/black-dashboard-flask.css?v=1.0.0" rel="stylesheet"/> -->
+<link rel="stylesheet" href="/static/css/layout.css">
+
 
 </head>
 <body id="top">
@@ -18,7 +20,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('../images/demo/backgrounds/01.png');"> 
+<div class="bgded overlay" style="background-image:url('/static/images/demo/backgrounds/01.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row0">
     <div id="topbar" class="hoc clear"> 
@@ -34,7 +36,7 @@
       <div class="fl_right"> 
         <!-- ################################################################################################ -->
         <ul class="nospace">
-          <li><a href="../index.html"><i class="fas fa-home"></i></a></li>
+          <li><a href="/"><i class="fas fa-home"></i></a></li>
    
           <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
           
@@ -51,20 +53,20 @@
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="../index.html">NBA TEAMS & PLAYERS</a></h1>
+        <h1><a href="/">NBA TEAMS & PLAYERS</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li class="active"><a class="drop" href="#">Pages</a>
             <ul>
          
-              <li><a href="full-width.html">Full Width</a></li>
-              <li><a href="sidebar-left.html">Sidebar Left</a></li>
+              <li><a href="/full">Full Width</a></li>
+              <li><a href="/side">Sidebar Left</a></li>
             
            
-              <li class="active"><a href="font-icons.html">Font Icons</a></li>
+              <li class="active"><a href="/font">Font Icons</a></li>
             </ul>
           </li>
           <li><a class="drop" href="#">NAB TEAM</a>
