--- a/templates/full-width.html
+++ b/templates/full-width.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 
-<html lang="eng">
+<html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>NAB G9 | Pages | Sidebar Left</title>
+<title>NAB G9 | Pages | Full Width</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
-<link href="static rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<!-- <link href="/css/layout.css" rel="stylesheet" type="text/css" media="all"> -->
+<link href="static" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet"/>
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"/>
-<link href="static/css/black-dashboard-flask.css?v=1.0.0" rel="stylesheet"/>
-
+<!-- <link href="static/css/black-dashboard-flask.css?v=1.0.0" rel="stylesheet"/> -->
+<link rel="stylesheet" href="/static/css/layout.css">
 
 
 </head>
@@ -20,7 +20,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('../images/demo/backgrounds/01.png');"> 
+<div class="bgded overlay" style="background-image:url('/static/images/demo/backgrounds/01.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row0">
     <div id="topbar" class="hoc clear"> 
@@ -28,16 +28,16 @@
       <div class="fl_left"> 
         <!-- ################################################################################################ -->
         <ul class="nospace">
-         
-          <li><i class="far fa-envelope"></i> groupnumbernine.com</li>
+          
+          <li><i class="far fa-envelope"></i> info@groupnumbernine.com</li>
         </ul>
         <!-- ################################################################################################ -->
       </div>
       <div class="fl_right"> 
         <!-- ################################################################################################ -->
         <ul class="nospace">
-          <li><a href="../index.html"><i class="fas fa-home"></i></a></li>
-        
+          <li><a href="/"><i class="fas fa-home"></i></a></li>
+       
           <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
          
         </ul>
@@ -53,42 +53,45 @@
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="../index.html">NBA TEAMS & PLAYERS</a></h1>
+        <h1><a href="/">NBA TEAMS & PLAYERS</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li class="active"><a class="drop" href="#">Pages</a>
             <ul>
-             
-              <li><a href="full-width.html">Full Width</a></li>
-              <li class="active"><a href="sidebar-left.html">Sidebar Left</a></li>
-              
-        
-              <li><a href="font-icons.html">Font Icons</a></li>
+            
+              <li class="active"><a href="/full">Full Width</a></li>
+              <li><a href="/side">Sidebar Left</a></li>
+           
+          
+              <li><a href="/font">Font Icons</a></li>
             </ul>
           </li>
-          <li><a class="drop" href="#">NBA TEAM</a>
+          <li><a class="drop" href="#">NAB TEAM</a>
             <ul>
-              <li><a href="#">Level 2</a></li>
-              <li><a class="drop" href="#">Level 2 + Drop</a>
+         
                 <ul>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
+                  
                 </ul>
               </li>
-             
+        
             </ul>
           </li>
-          
+         
         </ul>
       </nav>
       <!-- ################################################################################################ -->
     </header>
   </div>
-  
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+ 
+    <!-- ################################################################################################ -->
+   
+    
     <!-- ################################################################################################ -->
   </div>
   <!-- ################################################################################################ -->
@@ -101,110 +104,37 @@
   <main class="hoc container clear"> 
     <!-- main body -->
     <!-- ################################################################################################ -->
-    <div class="sidebar one_quarter first"> 
-      <!-- ################################################################################################ -->
-      <h6>Lorem ipsum dolor</h6>
-      <nav class="sdb_holder">
-        <ul>
-          <li><a href="#">Navigation - Level 1</a></li>
-          <li><a href="#">Navigation - Level 1</a>
-            <ul>
-              <li><a href="#">Navigation - Level 2</a></li>
-              <li><a href="#">Navigation - Level 2</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Navigation - Level 1</a>
-            <ul>
-              <li><a href="#">Navigation - Level 2</a></li>
-              <li><a href="#">Navigation - Level 2</a>
-                <ul>
-                  <li><a href="#">Navigation - Level 3</a></li>
-                  <li><a href="#">Navigation - Level 3</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li><a href="#">Navigation - Level 1</a></li>
-        </ul>
-      </nav>
-      <div class="sdb_holder">
-        <h6>Lorem ipsum dolor</h6>
-        <address>
-        Full Name<br>
-        Address Line 1<br>
-        Address Line 2<br>
-        Town/City<br>
-        Postcode/Zip<br>
-        <br>
-        Tel: xxxx xxxx xxxxxx<br>
-        Email: <a href="#">contact@domain.com</a>
-        </address>
-      </div>
-      <div class="sdb_holder">
-        <article>
-          <h6>Lorem ipsum dolor</h6>
-          <p>Nuncsed sed conseque a at quismodo tris mauristibus sed habiturpiscinia sed.</p>
-          <ul>
-            <li><a href="#">Lorem ipsum dolor sit</a></li>
-            <li>Etiam vel sapien et</li>
-            <li><a href="#">Etiam vel sapien et</a></li>
-          </ul>
-          <p>Nuncsed sed conseque a at quismodo tris mauristibus sed habiturpiscinia sed. Condimentumsantincidunt dui mattis magna intesque purus orci augue lor nibh.</p>
-          <p class="more"><a href="#">Continue Reading &raquo;</a></p>
-        </article>
-      </div>
-      <!-- ################################################################################################ -->
-    </div>
-    <!-- ################################################################################################ -->
-    <!-- ################################################################################################ -->
-    <div class="content three_quarter"> 
+    <div class="content"> 
       <!-- ################################################################################################ -->
       <h1>&lt;h1&gt; to &lt;h6&gt; - Headline Colour and Size Are All The Same</h1>
-      <img class="imgr borderedbox inspace-5" src="../images/demo/imgr.gif" alt="">
+      <img class="imgr borderedbox inspace-5" src="/static/images/demo/imgr.gif" alt="">
       <p>Aliquatjusto quisque nam consequat doloreet vest orna partur scetur portortis nam. Metadipiscing eget facilis elit sagittis felisi eger id justo maurisus convallicitur.</p>
       <p>Dapiensociis <a href="#">temper donec auctortortis cumsan</a> et curabitur condis lorem loborttis leo. Ipsumcommodo libero nunc at in velis tincidunt pellentum tincidunt vel lorem.</p>
-      <img class="imgl borderedbox inspace-5" src="../images/demo/imgl.gif" alt="">
+      <img class="imgl borderedbox inspace-5" src="/static/images/demo/imgl.gif" alt="">
       <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
       <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more website templates visit our <a href="https://www.os-templates.com/">free website templates</a> section.</p>
       <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
       <h1>Table(s)</h1>
       <div class="scrollable">
-        <table>
-          <thead>
-            <tr>
-              <th>Header 1</th>
-              <th>Header 2</th>
-              <th>Header 3</th>
-              <th>Header 4</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="#">Value 1</a></td>
-              <td>Value 2</td>
-              <td>Value 3</td>
-              <td>Value 4</td>
-            </tr>
-            <tr>
-              <td>Value 5</td>
-              <td>Value 6</td>
-              <td>Value 7</td>
-              <td><a href="#">Value 8</a></td>
-            </tr>
-            <tr>
-              <td>Value 9</td>
-              <td>Value 10</td>
-              <td>Value 11</td>
-              <td>Value 12</td>
-            </tr>
-            <tr>
-              <td>Value 13</td>
-              <td><a href="#">Value 14</a></td>
-              <td>Value 15</td>
-              <td>Value 16</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="col-md-10">
+          <div id="table-area" class="">
+            <table>
+              <thead>
+                <tr>
+                  <th class="table-head">Gender</th>
+                  <th class="table-head">Ethnicity</th>
+                  <th class="table-head">Parental Education</th>
+                  <th class="table-head">Lunch Type</th>
+                  <th class="table-head">Test Preperation</th>
+                  <th class="table-head">Math Score</th>
+                  <th class="table-head">Reading Score</th>
+                  <th class="table-head">Writing Score</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
+        </div>
       </div>
       <div id="comments">
         <h2>Comments</h2>
@@ -212,7 +142,7 @@
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="../images/demo/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="/static/images/demo/avatar.png" alt=""></figure>
                 <address>
                 By <a href="#">A Name</a>
                 </address>
@@ -226,7 +156,7 @@
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="../images/demo/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="/static/images/demo/avatar.png" alt=""></figure>
                 <address>
                 By <a href="#">A Name</a>
                 </address>
@@ -240,7 +170,7 @@
           <li>
             <article>
               <header>
-                <figure class="avatar"><img src="../images/demo/avatar.png" alt=""></figure>
+                <figure class="avatar"><img src="/static/images/demo/avatar.png" alt=""></figure>
                 <address>
                 By <a href="#">A Name</a>
                 </address>
@@ -334,9 +264,9 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script src="/app.js"></script>
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
+<script src="/static/app.js"></script>
+<script src="/static/scripts/jquery.min.js"></script>
+<script src="/static/scripts/jquery.backtotop.js"></script>
+<script src="/static/scripts/jquery.mobilemenu.js"></script>
 </div>
 </html>
