cleaned and connected each current html, added ML html

--- a/templates/font-icons.html
+++ b/templates/font-icons.html
@@ -29,7 +29,7 @@
         <!-- ################################################################################################ -->
         <ul class="nospace">
        
-          <li><i class="far fa-envelope"></i> info@groupnumbernine.com</li>
+          <li><i class="far fa-envelope"></i> GroupNumberNine</li>
         </ul>
         <!-- ################################################################################################ -->
       </div>
@@ -53,29 +53,26 @@
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="/">NBA TEAMS & PLAYERS</a></h1>
+        <h1><a href="/">Home</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
         <ul class="clear">
           <li><a href="/">Home</a></li>
-          <li class="active"><a class="drop" href="#">Pages</a>
-            <ul>
-         
-              <li><a href="/full">Full Width</a></li>
-              <li><a href="/side">Sidebar Left</a></li>
-            
-           
+          <li class="active"><a class="drop" href="#">Visuals/Graphics</a>
+            <ul>         
+              <li><a href="/full">Data Table</a></li>
+              <li><a href="/side">Sidebar Left</a></li>            
               <li class="active"><a href="/font">Font Icons</a></li>
+              <li><a href="#">Something (Visual?)</a></li>
             </ul>
           </li>
-          <li><a class="drop" href="#">NAB TEAM</a>
+          <li>
+            <a class="drop" href="#">What is your score?</a>
             <ul>
-              <li><a href="#">Level 2</a></li>
-              
-                
-              </li>
-             
+              <li><a href="/math">ML 1</a></li>
+              <li><a href="/side">ML 2</a></li>
+              <li><a href="/font">ML 3</a></li>
             </ul>
           </li>
         
@@ -91,9 +88,8 @@
     <!-- ################################################################################################ -->
     
     <!-- ################################################################################################ -->
-  </div>
-  <!-- ################################################################################################ -->
 </div>
+  <!-- ################################################################################################ -->
 <!-- End Top Background Image Wrapper -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
@@ -1189,7 +1185,7 @@
             </address>
           </li>
          
-          <li><i class="far fa-envelope"></i> groupnumbernine.com</li>
+          <li><i class="far fa-envelope"></i> GroupNumberNine</li>
         </ul>
         <ul class="faico clear">
       
@@ -1204,7 +1200,7 @@
 
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear"> 
-    <p class="fl_left">Copyright &copy; 2021 - All Rights Reserved - <a href="#">www.groupnumbernine.com</a></p>
+    <p class="fl_left">Copyright &copy; 2021 - All Rights Reserved - <a href="#">www.GroupNumberNine</a></p>
   </div>
 </div>
 
