--- a/templates/ml_math.html
+++ b/templates/ml_math.html
@@ -1,3 +1,5 @@
+<!-- ONLY A TEMPLATE FOR WHEN WE ACTUALLY GET THE MACHINE LEARNING STARTED AND WORKING -->
+
 <!DOCTYPE html>
 
 <html lang="">
@@ -53,26 +55,26 @@
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="#">Student Data Table</a></h1>
+        <h1><a href="#">Math Score Prediction</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li><a href="/"></a>Home</li>
-          <li class="active"><a class="drop" href="#">Visuals/Graphics</a>
+          <li><a href="/">Home</a></li>
+          <li><a class="drop" href="#">Visuals/Graphics</a>
             <ul>            
-              <li class="active"><a href="/full">Data Table</a></li>
+              <li><a href="/full">Data Table</a></li>
               <li><a href="/side">Sidebar Left</a></li>
               <li><a href="/font">Font Icons</a></li>
               <li><a href="#">Something (Visual?)</a></li>
 
             </ul>
           </li>
-          <li>
+          <li class="active">
             <a class="drop" href="#">What is your score?</a>
             <!-- DEPENDING ON HOW WE USE THE MACHINE LEARNING WILL DETERMINE IF WE KEEP THIS AND IF WE WILL NEED TO CREATE MORE HTMLS  -->
             <ul>
-              <li><a href="/math">ML 1</a></li>
+              <li class="active"><a href="/math">ML 1</a></li>
               <li><a href="/side">ML 2</a></li>
               <li><a href="/font">ML 3</a></li>
             </ul>
@@ -106,67 +108,8 @@
     <!-- ################################################################################################ -->
     <div class="content"> 
       <!-- ################################################################################################ -->
-      <h1>&lt;h1&gt; to &lt;h6&gt; - Headline Colour and Size Are All The Same</h1>
-      <img class="imgr borderedbox inspace-5" src="/static/images/demo/imgr.gif" alt="">
-      <p>Aliquatjusto quisque nam consequat doloreet vest orna partur scetur portortis nam. Metadipiscing eget facilis elit sagittis felisi eger id justo maurisus convallicitur.</p>
-      <p>Dapiensociis <a href="#">temper donec auctortortis cumsan</a> et curabitur condis lorem loborttis leo. Ipsumcommodo libero nunc at in velis tincidunt pellentum tincidunt vel lorem.</p>
-      <img class="imgl borderedbox inspace-5" src="/static/images/demo/imgl.gif" alt="">
-      <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
-      <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more website templates visit our <a href="https://www.os-templates.com/">free website templates</a> section.</p>
-      <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
-      <h1>Table(s)</h1>
-      <div class="scrollable">
-        <div class="col-md-10">
-          <div id="table-area" class="">
-            <table>
-              <thead>
-                <tr>
-                  <th class="table-head">Gender</th>
-                  <th class="table-head">Ethnicity</th>
-                  <th class="table-head">Parental Education</th>
-                  <th class="table-head">Lunch Type</th>
-                  <th class="table-head">Test Preperation</th>
-                  <th class="table-head">Math Score</th>
-                  <th class="table-head">Reading Score</th>
-                  <th class="table-head">Writing Score</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-      <div id="comments">
         <h2>Comments</h2>
         <ul>
-          <li>
-            <article>
-              <header>
-                <figure class="avatar"><img src="/static/images/demo/avatar.png" alt=""></figure>
-                <address>
-                By <a href="#">A Name</a>
-                </address>
-                <time datetime="2045-04-06T08:15+00:00">Friday, 6<sup>th</sup> April 2045 @08:15:00</time>
-              </header>
-              <div class="comcont">
-                <p>This is an example of a comment made on a post. You can either edit the comment, delete the comment or reply to the comment. Use this as a place to respond to the post or to share what you are thinking.</p>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <header>
-                <figure class="avatar"><img src="/static/images/demo/avatar.png" alt=""></figure>
-                <address>
-                By <a href="#">A Name</a>
-                </address>
-                <time datetime="2045-04-06T08:15+00:00">Friday, 6<sup>th</sup> April 2045 @08:15:00</time>
-              </header>
-              <div class="comcont">
-                <p>This is an example of a comment made on a post. You can either edit the comment, delete the comment or reply to the comment. Use this as a place to respond to the post or to share what you are thinking.</p>
-              </div>
-            </article>
-          </li>
           <li>
             <article>
               <header>
