--- a/templates/font-icons.html
+++ b/templates/font-icons.html
@@ -3,14 +3,12 @@
 <html lang="eng">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>NBA G9 | Pages | Font Icons</title>
+<title>Exam Scores | Pages | Font Icons</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<!-- <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all"> -->
 <link href="static" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet"/>
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"/>
-<!-- <link href="static/css/black-dashboard-flask.css?v=1.0.0" rel="stylesheet"/> -->
 <link rel="stylesheet" href="/static/css/layout.css">
 
 
@@ -37,9 +35,7 @@
         <!-- ################################################################################################ -->
         <ul class="nospace">
           <li><a href="/"><i class="fas fa-home"></i></a></li>
-   
-          <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
-          
+             
         </ul>
         <!-- ################################################################################################ -->
       </div>
@@ -62,17 +58,16 @@
           <li class="active"><a class="drop" href="#">Visuals/Graphics</a>
             <ul>         
               <li><a href="/full">Data Table</a></li>
-              <li><a href="/side">Sidebar Left</a></li>            
+              <li><a href="/side">Dashboard</a></li>            
               <li class="active"><a href="/font">Font Icons</a></li>
-              <li><a href="#">Something (Visual?)</a></li>
             </ul>
           </li>
           <li>
-            <a class="drop" href="#">What is your score?</a>
+            <a class="drop" href="#">Performance Model</a>
             <ul>
-              <li><a href="/math">ML 1</a></li>
-              <li><a href="/side">ML 2</a></li>
-              <li><a href="/font">ML 3</a></li>
+              <li><a href="/math">Math</a></li>
+              <li><a href="/reading">Reading</a></li>
+              <li><a href="/writing">Writing</a></li>
             </ul>
           </li>
         
