--- a/templates/ml_math.html
+++ b/templates/ml_math.html
@@ -1,18 +1,14 @@
-<!-- ONLY A TEMPLATE FOR WHEN WE ACTUALLY GET THE MACHINE LEARNING STARTED AND WORKING -->
-
 <!DOCTYPE html>
 
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>NAB G9 | Pages | Data Table</title>
+<title>Exam Scores | Pages | Math</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<!-- <link href="/css/layout.css" rel="stylesheet" type="text/css" media="all"> -->
 <link href="static" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet"/>
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"/>
-<!-- <link href="static/css/black-dashboard-flask.css?v=1.0.0" rel="stylesheet"/> -->
 <link rel="stylesheet" href="/static/css/layout.css">
 
 
@@ -39,9 +35,7 @@
         <!-- ################################################################################################ -->
         <ul class="nospace">
           <li><a href="/"><i class="fas fa-home"></i></a></li>
-       
-          <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
-         
+                
         </ul>
         <!-- ################################################################################################ -->
       </div>
@@ -55,7 +49,7 @@
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="#">Math Score Prediction</a></h1>
+        <h1><a href="#">Math Score Model</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
@@ -64,19 +58,18 @@
           <li><a class="drop" href="#">Visuals/Graphics</a>
             <ul>            
               <li><a href="/full">Data Table</a></li>
-              <li><a href="/side">Sidebar Left</a></li>
+              <li><a href="/side">Dashboard</a></li>
               <li><a href="/font">Font Icons</a></li>
-              <li><a href="#">Something (Visual?)</a></li>
 
             </ul>
           </li>
           <li class="active">
-            <a class="drop" href="#">What is your score?</a>
+            <a class="drop" href="#">Performance Model</a>
             <!-- DEPENDING ON HOW WE USE THE MACHINE LEARNING WILL DETERMINE IF WE KEEP THIS AND IF WE WILL NEED TO CREATE MORE HTMLS  -->
             <ul>
-              <li class="active"><a href="/math">ML 1</a></li>
-              <li><a href="/side">ML 2</a></li>
-              <li><a href="/font">ML 3</a></li>
+              <li class="active"><a href="/math">Math</a></li>
+              <li><a href="/reading">Reading</a></li>
+              <li><a href="/writing">Writing</a></li>
             </ul>
 
           </li>
@@ -108,47 +101,26 @@
     <!-- ################################################################################################ -->
     <div class="content"> 
       <!-- ################################################################################################ -->
-        <h2>Comments</h2>
-        <ul>
-          <li>
-            <article>
-              <header>
-                <figure class="avatar"><img src="/static/images/demo/avatar.png" alt=""></figure>
-                <address>
-                By <a href="#">A Name</a>
-                </address>
-                <time datetime="2045-04-06T08:15+00:00">Friday, 6<sup>th</sup> April 2045 @08:15:00</time>
-              </header>
-              <div class="comcont">
-                <p>This is an example of a comment made on a post. You can either edit the comment, delete the comment or reply to the comment. Use this as a place to respond to the post or to share what you are thinking.</p>
-              </div>
-            </article>
-          </li>
-        </ul>
-        <h2>Write A Comment</h2>
+        <!-- <h2>Write A Comment</h2>
         <form action="#" method="post">
-          <div class="one_third first">
+          <div>
             <label for="name">Name <span>*</span></label>
             <input type="text" name="name" id="name" value="" size="22" required>
           </div>
-          <div class="one_third">
+          <div>
             <label for="email">Mail <span>*</span></label>
             <input type="email" name="email" id="email" value="" size="22" required>
           </div>
-          <div class="one_third">
+          <div>
             <label for="url">Website</label>
             <input type="url" name="url" id="url" value="" size="22">
-          </div>
-          <div class="block clear">
-            <label for="comment">Your Comment</label>
-            <textarea name="comment" id="comment" cols="25" rows="10"></textarea>
           </div>
           <div>
             <input type="submit" name="submit" value="Submit Form">
             &nbsp;
             <input type="reset" name="reset" value="Reset Form">
           </div>
-        </form>
+        </form> -->
       </div>
       <!-- ################################################################################################ -->
     </div>
