--- a/templates/ml_writing.html
+++ b/templates/ml_writing.html
@@ -3,7 +3,7 @@
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>Exam Scores | Pages | Data Table</title>
+<title>Exam Scores | Pages | Writing</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="static" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -49,27 +49,27 @@
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="#">Student Data Table</a></h1>
+        <h1><a href="#">Writing Score Prediction</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
         <ul class="clear">
           <li><a href="/">Home</a></li>
-          <li class="active"><a class="drop" href="#">Visuals/Graphics</a>
+          <li><a class="drop" href="#">Visuals/Graphics</a>
             <ul>            
-              <li class="active"><a href="/full">Data Table</a></li>
+              <li><a href="/full">Data Table</a></li>
               <li><a href="/side">Dashboard</a></li>
               <li><a href="/font">Font Icons</a></li>
 
             </ul>
           </li>
-          <li>
+          <li class="active">
             <a class="drop" href="#">Performance Model</a>
             <!-- DEPENDING ON HOW WE USE THE MACHINE LEARNING WILL DETERMINE IF WE KEEP THIS AND IF WE WILL NEED TO CREATE MORE HTMLS  -->
             <ul>
               <li><a href="/math">Math</a></li>
               <li><a href="/reading">Reading</a></li>
-              <li><a href="/writing">Writing</a></li>
+              <li class="active"><a href="/writing">Writing</a></li>
             </ul>
 
           </li>
@@ -101,30 +101,28 @@
     <!-- ################################################################################################ -->
     <div class="content"> 
       <!-- ################################################################################################ -->
-     <!-- <h1>Table(s)</h1> -->
-      <div class="scrollable">
-        <div class="col-md-10">
-          <div id="table-area" class="">
-            <table>
-              <thead>
-                <tr>
-                  <th class="table-head">Gender</th>
-                  <th class="table-head">Ethnicity</th>
-                  <th class="table-head">Parental Education</th>
-                  <th class="table-head">Lunch Type</th>
-                  <th class="table-head">Test Preperation</th>
-                  <th class="table-head">Math Score</th>
-                  <th class="table-head">Reading Score</th>
-                  <th class="table-head">Writing Score</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
+        <!-- <h2>Write A Comment</h2>
+        <form action="#" method="post">
+          <div>
+            <label for="name">Name <span>*</span></label>
+            <input type="text" name="name" id="name" value="" size="22" required>
           </div>
-        </div>
+          <div>
+            <label for="email">Mail <span>*</span></label>
+            <input type="email" name="email" id="email" value="" size="22" required>
+          </div>
+          <div>
+            <label for="url">Website</label>
+            <input type="url" name="url" id="url" value="" size="22">
+          </div>
+          <div>
+            <input type="submit" name="submit" value="Submit Form">
+            &nbsp;
+            <input type="reset" name="reset" value="Reset Form">
+          </div>
+        </form> -->
       </div>
-      
-    <!-- ################################################################################################ -->
+      <!-- ################################################################################################ -->
     </div>
     <!-- ################################################################################################ -->
     <!-- / main body -->
