--- a/templates/full-width.html
+++ b/templates/full-width.html
@@ -18,7 +18,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('/static/images/demo/backgrounds/01.png');"> 
+<div class="bgded overlay" style="background-image:url('/static/images/code_bkgd_that_makes_sense.jpg');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row0">
     <div id="topbar" class="hoc clear"> 
@@ -99,11 +99,12 @@
   <main class="hoc container clear"> 
     <!-- main body -->
     <!-- ################################################################################################ -->
+    
     <div class="content"> 
       <!-- ################################################################################################ -->
      <!-- <h1>Table(s)</h1> -->
       <div class="scrollable">
-        <div class="col-md-10">
+        <div class="col-md-10 center">
           <div id="table-area" class="">
             <table>
               <thead>
