--- a/templates/ml_math.html
+++ b/templates/ml_math.html
@@ -21,7 +21,7 @@
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <!-- Top Background Image Wrapper -->
-  <div class="bgded overlay" style="background-image:url('/static/images/demo/backgrounds/01.png');">
+  <div class="bgded overlay" style="background-image:url('/static/images/ML_bkgd.png');">
     <!-- ################################################################################################ -->
     <div class="wrapper row0">
       <div id="topbar" class="hoc clear">
