--- a/templates/font-icons.html
+++ b/templates/font-icons.html
@@ -18,7 +18,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('/static/images/demo/backgrounds/01.png');"> 
+<div class="bgded overlay" style="background-image:url('/static/images/th.jpg');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row0">
     <div id="topbar" class="hoc clear"> 
