--- a/templates/sidebar-left.html
+++ b/templates/sidebar-left.html
@@ -7,7 +7,8 @@
   <title>Exam Scores | Pages | Dashboard</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet" />
   <!-- <link href="static/css/black-dashboard-flask.css?v=1.0.0" rel="stylesheet"/> -->
@@ -23,7 +24,7 @@
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <!-- Top Background Image Wrapper -->
-  <div class="bgded overlay" style="background-image:url('/static/images/demo/backgrounds/01.png');">
+  <div class="bgded overlay" style="background-image:url('/static/images/code_bkgd_that_makes_sense.jpg');">
     <!-- ################################################################################################ -->
     <div class="wrapper row0">
       <div id="topbar" class="hoc clear">
@@ -147,6 +148,7 @@
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
+
   <div class="wrapper row4">
     <footer id="footer" class="hoc clear">
 
