--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     <!-- Top Background Image Wrapper -->
     <div
       class="bgded overlay"
-      style="background-image: url('/static/images/eval_perform.jpeg')"
+      style="background-image: url('/static/images/pform2.jpg')"
     >
       <!-- ################################################################################################ -->
       <div class="wrapper row0">
