added write up to ml html pages

--- a/templates/full-width.html
+++ b/templates/full-width.html
@@ -59,7 +59,7 @@
             <ul>            
               <li class="active"><a href="/full">Data Table</a></li>
               <li><a href="/side">Dashboard</a></li>
-              <li><a href="/font">Font Icons</a></li>
+              <!-- <li><a href="/font">Font Icons</a></li> -->
 
             </ul>
           </li>
