--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
                 <ul>
                   <li><a href="/full">Data Table</a></li>
                   <li><a href="/side">Dashboard</a></li>
-                  <li><a href="/font">Icons</a></li>
+                  <!-- <li><a href="/font">Icons</a></li> -->
                 </ul>
               </li>
               <li>
