--- a/templates/sidebar-left.html
+++ b/templates/sidebar-left.html
@@ -65,7 +65,7 @@
               <ul>
                 <li><a href="/full">Data Table</a></li>
                 <li class="active"><a href="/side">Dashboard</a></li>
-                <li><a href="/font">Font Icons</a></li>
+                <!-- <li><a href="/font">Font Icons</a></li> -->
               </ul>
             </li>
             <li>
