--- a/templates/ml_reading.html
+++ b/templates/ml_reading.html
@@ -62,7 +62,7 @@
               <ul>
                 <li><a href="/full">Data Table</a></li>
                 <li><a href="/side">Dashboard</a></li>
-                <li><a href="/font">Font Icons</a></li>
+                <!-- <li><a href="/font">Font Icons</a></li> -->
 
               </ul>
             </li>
@@ -109,9 +109,14 @@
           <div class="col-md-12">
             <img src="/static/images/reading_r2.png" alt="Reading Score R2" class="img-responsive"
               style="width: 250px; height: 50px" />
-            <p>testing</p>
-
           </div>
+        </div>
+
+        <div class="offset-3 col-md-6">
+          <p style="text-align:center; font-size: larger">Using Linear Regression we discovered that the R2 score was
+            around 0.11, the lowest out of the three
+            tested subjects. This means that the independent variables given in our dataset had very little importance
+            when determining a student’s reading score.</p>
         </div>
 
         <div>
@@ -126,7 +131,6 @@
                     style="width: 400px; height: 400px" />
                 </div>
               </article>
-              <p>hi</p>
             </li>
 
           </div>
@@ -141,11 +145,19 @@
                     style="width: 300px; height: 400px" />
                 </div>
               </article>
-              <p>hi</p>
             </li>
 
           </div>
 
+        </div>
+        <br>
+        <div class="offset-3 col-md-6">
+          <p style="text-align:center; font-size: larger"> <br> We then used a Random Forest Classifier to determine out
+            of the features in our dataset, which seemed to
+            have the most significance when predicting reading scores. As shown here, even though no features have a
+            huge impact on determining reading scores, a students’ parental level of education has the strongest
+            significance.
+          </p>
         </div>
 
       </div>
